clone decisiontable endpoint
