# doc/starchat-swagger.yaml
@@ -1253,6 +1253,52 @@ paths:
             schema:
               $ref: '#/components/schemas/DTDocumentSearch'
         description: DecisionTable document with the query parameters
+  '/<src_index_name>/decisiontable/clone/<dst_index_name>':
+    post:
+      tags:
+        - customer
+      operationId: post_decisiontable_clone_index
+      summary: Clone a index
+      description: >-
+        Clone a index content into another index, the destination index is cleaned
+      parameters:
+        - in: path
+          name: src_index_name
+          description: name of the index to be cloned
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: dst_index_name
+          description: name of the destination index
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: reset
+          description: reset the destination index before cloning the data
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - in: query
+          name: propagate
+          description: trigger the update propagation by setting the update timestamp
+          required: false
+          schema:
+            type: boolean
+            default: true
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/IndexDocumentListResult'
+        '400':
+          description: 'invalid input, bad request'
+        '401':
+          description: authorization denied or authentication failed
   '/<index_name>/decisiontable/bulk':
     post:
       tags:
@@ -1371,7 +1417,7 @@ paths:
             type: string
         - in: query
           name: propagate
-          description: trigger the update propagation setting the update timestamp
+          description: trigger the update propagation by setting the update timestamp
           required: false
           schema:
             type: boolean
